--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  permission_handler: ^11.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,7 +38,6 @@ dependencies:
   photo_view: ^0.14.0
   cached_network_image: ^3.3.1
   path_provider: ^2.1.1
-  permission_handler: ^11.0.1
   image_picker: ^1.0.4
   share_plus: ^7.1.0
   geolocator: ^10.1.0
@@ -46,6 +46,9 @@ dependencies:
   path: ^1.9.1
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.1
+  excel: ^2.1.0
+  pdf: ^3.10.7
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
